# auto-pr

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MIGRATION_PLAN.md  README.md  SESSION_STATE.md  auto-pr  pyproject.toml
auto_pr/: __main__.py
auto_pr/application/: __init__.py
auto_pr/application/services/: __init__.py  ai_selector.py  prompt_builder.py
auto_pr/application/use_cases/: __init__.py  compare_ai.py  create_pr.py  generate_pr.py
auto_pr/cli/: app.py
auto_pr/config/: __init__.py  settings.py
auto_pr/domain/: __init__.py  exceptions.py
auto_pr/domain/entities/: __init__.py  existing_pr.py  git_context.py  jira_ticket.py  pr_description.py
auto_pr/domain/interfaces/: __init__.py  ai_provider.py  git_client.py  jira_client.py  pr_client.py
auto_pr/infrastructure/: __init__.py  subprocess_runner.py
auto_pr/infrastructure/ai/: __init__.py  agent.py  base.py  copilot.py  gemini.py
auto_pr/infrastructure/git/: __init__.py  client.py
auto_pr/infrastructure/github/: __init__.py  gh_client.py
auto_pr/infrastructure/jira/: __init__.py  acli_client.py
docs/: ARCHITECTURE.md  ERROR_HANDLING.md  RELEASING.md  STYLE_GUIDE.md  TESTING.md
tests/: conftest.py
tests/unit/domain/: test_entities.py
